--- a/src/styles/mxgraph.base.scss
+++ b/src/styles/mxgraph.base.scss
@@ -4,7 +4,7 @@
   margin: 5px auto;
   width: 70vw;
   height: 80vh;
-  background: url("../assets/grid.gif");
+  background: url('../assets/grid.gif');
   cursor: default;
 }
 
