--- a/src/styles/mxgraph.base.scss
+++ b/src/styles/mxgraph.base.scss
@@ -1,12 +1,24 @@
-.graph {
-  position: relative;
-  overflow: auto;
-  margin: 5px auto;
-  width: 70vw;
-  height: 80vh;
-  background: url('../assets/grid.gif');
-  cursor: default;
+
+.graph-test{
+  background-color: #f7f7f7;
+  .graph {
+    position: relative;
+    overflow: auto;
+    margin: 5px auto;
+    width: 70vw;
+    height: 80vh;
+    background-size: 22px 22px;
+    background-image: linear-gradient(
+        90deg,
+        rgba(50, 0, 0, 0.1) 3%,
+        transparent 0
+      ),
+      linear-gradient(1turn, rgba(50, 0, 0, 0.1) 3%, transparent 0);
+    // background: url('../assets/grid.gif');
+    cursor: default;
+  }
 }
+
 
 .flow {
   stroke-dasharray: 8;
