--- a/src/styles/mxgraph.base.scss
+++ b/src/styles/mxgraph.base.scss
@@ -1,4 +1,4 @@
-.graph-test{
+.graph-test {
   background-color: #f7f7f7;
   .graph {
     position: relative;
@@ -7,13 +7,13 @@
     width: 70vw;
     height: 80vh;
     background-size: 22px 22px;
-    background-image: linear-gradient(
-        90deg,
-        rgba(50, 0, 0, 0.1) 3%,
-        transparent 0
-      ),
-      linear-gradient(1turn, rgba(50, 0, 0, 0.1) 3%, transparent 0);
-    // background: url('../assets/grid.gif');
+    // background-image: linear-gradient(
+    //     90deg,
+    //     rgba(50, 0, 0, 0.1) 3%,
+    //     transparent 0
+    //   ),
+    //   linear-gradient(1turn, rgba(50, 0, 0, 0.1) 3%, transparent 0);
+    background: url('../assets/grid.gif');
     cursor: default;
   }
 }
