--- a/src/styles/main.pane.scss
+++ b/src/styles/main.pane.scss
@@ -9,13 +9,13 @@
   .menus {
     line-height: 50px;
     height: 50px;
-    background-color: green;
+    background-color: #bfa;
   }
 
   .toolbar {
     line-height: 50px;
     height: 50px;
-    background-color: blueviolet;
+    background-color: #bfacde;
   }
 
   .main {
@@ -36,7 +36,21 @@
 
     .right-props {
       width: 200px;
-      background-color: chartreuse;
+      background-color: #fbfbfb;
+      border-left: 1px solid #dadce0;
+
+      .diagram {
+        display: flex;
+        flex-direction: column;
+
+        .d-header {
+          display: flex;
+          flex-direction: row;
+        }
+
+        .d-body {
+        }
+      }
     }
   }
 }
